--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/react-dom": "18.2.5",
     "eslint": "8.43.0",
     "eslint-config-next": "13.4.6",
+    "graphql": "^16.6.0",
+    "graphql-request": "^6.1.0",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
