--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint-config-next": "13.4.6",
     "graphql": "^16.6.0",
     "graphql-request": "^6.1.0",
+    "icomoon-react": "^3.0.0",
     "next": "13.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
